@@ -198,8 +198,9 @@ struct _PyGObject_Functions {
 				      PyGTypeRegistrationFunction callback,
 				      gpointer data);
     gboolean  (*gerror_exception_check) (GError **error);
-
+    PyObject* (*option_group_new) (GOptionGroup *group);
 };
+
 
 #ifndef _INSIDE_PYGOBJECT_
 
@@ -262,6 +263,7 @@ struct _PyGObject_Functions *_PyGObject_API;
 #define pyg_disable_warning_redirections (_PyGObject_API->disable_warning_redirections)
 #define pyg_type_register_custom_callback (_PyGObject_API->type_register_custom)
 #define pyg_gerror_exception_check (_PyGObject_API->gerror_exception_check)
+#define pyg_option_group_new       (_PyGObject_API->option_group_new)
 
 
 #define pyg_block_threads()   G_STMT_START {   \
